kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helper_api
  namespace: it-ex-automation
  labels:
    app: helper_api
spec:
  selector:
    app: helper_api
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
