kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helper_api-ingress
  namespace: it-ex-automation
spec:
  ingressClassName: traefik
  rules:
  - host: "helper_api-it-ex-automation.kube.wdc.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: helper_api
            port:
              number: 80
